# webvfx

./: .gitignore  CMakeLists.txt  CNAME  Chromix.gyp  ChromixExtension.cc  ChromixExtension.h  ImageExtension.cc  ImageExtension.h  LICENSE  Loader.cc  Loader.h  MixGlobal.cc  MixGlobal.h  MixKit.cc  MixKit.gyp  MixKit.h  MixKit.mm  MixKitPrivate.h  MixKitWebFrameClient.cc  MixKitWebFrameClient.h  MixKitWebKitClient.h  MixKit_Prefix.pch  MixManager.cc  MixManager.h  MixParameterMap.cc  MixParameterMap.h  MixRender.cc  MixRender.h  MixRenderLoader.cc  MixRenderLoader.h  README.md  RenderDelegate.cc  RenderDelegate.h  RenderMixKit.mm  ScriptingSupport.cc  ScriptingSupport.h  WebFrameClientImpl.cc  WebFrameClientImpl.h  WebKitClientImpl.h  WebKitRender.mm  (+59 more)
.devcontainer/: devcontainer.json
3d/: AnimatedCamera.qml  BlenderItem3D.qml  TextTexture.qml  camera-path.js  camera-path.py  webvfx-camera.js  webvfx-camera.py
MixKit.xcodeproj/: project.pbxproj
RenderMixKit.xcodeproj/: project.pbxproj
WebKitRender.xcodeproj/: project.pbxproj
browser/: browser.cpp  browser.pro
chromix/: Chromix.cc  Chromix.h  ChromixExtension.cc  ChromixExtension.h  Delegate.cc  Delegate.h  ImageMap.cc  ImageMap.h  Loader.cc  Loader.h  MixKit.cc  MixKit.h  MixKitPrivate.h  MixRender.cc  MixRender.h  Parameter.cc  Parameter.h  ParameterMap.cc  ParameterMap.h  ParameterValue.cc  ParameterValue.h  ScriptingSupport.cc  ScriptingSupport.h  WebKitClientImpl.h  chromix.cc  chromix.cpp  chromix.h  chromix.pro  chromix_extension.cc  chromix_extension.h  delegate.cc  delegate.h  image_map.cc  image_map.h  loader.cc  loader.h  logger.cpp  logger.h  mix_kit.cpp  mix_kit.h  (+12 more)
common/: webvfx_common.h
demo/: chromix.demo.filter.yml  chromix.demo.producer.yml  chromix.demo.transition.yml  chromix.filter.demo.yml  chromix.producer.demo.yml  chromix.transition.demo.yml  demo.pro  filter.html  main.cc  main.cpp  main_mac.mm  producer.html  transition.html  webfx.filter.demo.html  webfx.filter.demo.yml  webfx.producer.demo.html  webfx.producer.demo.yml  webfx.transition.demo.html  webfx.transition.demo.yml  webvfx.filter.demo.html  webvfx.filter.demo.yml  webvfx.producer.demo.html  webvfx.producer.demo.html.yml  webvfx.producer.demo.yml  webvfx.transition.demo.html  webvfx.transition.demo.html.yml  webvfx.transition.demo.yml
doc/: CMakeLists.txt  Doxyfile  effects_3d.dox  effects_authoring.dox  examples.dox  footer.html  license.dox  mainpage.doc  mainpage.dox  mlt.dox
docker/: Dockerfile  docker-build.sh  docker-run.sh  docker-runtests.sh  runtests.sh
frameserver/: CMakeLists.txt  frameserver.cpp  frameserver.h  frameserver.pro  logger.cpp  logger.h  main.cpp  parameters.cpp  pipe_reader.cpp  pipe_reader.h  qml_content.cpp  video_texture.cpp  video_texture.h  webvfx.cpp  webvfx.h
frei0r/: CMakeLists.txt  filter.cpp  mixer2.cpp  mixer3.cpp  plugin.cpp  plugin.h  source.cpp  vfxpipe.cpp  vfxpipe.h
mlt/: CMakeLists.txt  chromix_context.h  chromix_context_linux.cc  chromix_context_mac.mm  chromix_filter.cc  chromix_helper.cc  chromix_helper.h  chromix_linux.cc  chromix_mac.m  chromix_producer.cc  chromix_service.cc  chromix_service.h  chromix_task.cc  chromix_task.h  chromix_transition.cc  factory.c  factory.cc  factory.cpp  factory.h  filter.cpp  filter_chromix.c  mlt.pro  panzoom_producer.cpp  producer.cpp  producer_chromix.c  service_locker.cpp  service_locker.h  service_manager.cpp  service_manager.h  transition.cpp  transition_chromix.c  vfxpipe_filter.cpp  vfxpipe_producer.cpp  vfxpipe_transition.cpp  webfx_filter.cpp  webfx_producer.cpp  webfx_service.cpp  webfx_service.h  webfx_transition.cpp  webvfx_filter.cpp  (+4 more)
mlt/qmelt/: qmelt.cpp  qmelt.pro
plugins/frei0r/: CMakeLists.txt  filter.cpp  mixer2.cpp  mixer3.cpp  plugin.cpp  plugin.h  source.cpp
plugins/mlt/: CMakeLists.txt  factory.cpp  factory.h  filter.cpp  producer.cpp  service_locker.cpp  service_locker.h  service_manager.cpp  service_manager.h  transition.cpp
search/: all_62.html  all_63.html  all_64.html  all_65.html  all_69.html  all_6c.html  all_70.html  all_72.html  all_73.html  all_74.html  all_77.html  classes_65.html  classes_69.html  classes_6c.html  classes_70.html  enums_69.html  enumvalues_65.html  enumvalues_73.html  functions_67.html  functions_69.html  functions_6c.html  functions_70.html  functions_73.html  search.js
src/: ChromixExtension.cc  Loader.cc  MixKit.cc  MixKit.h  MixRender.cc  MixRender.h  Parameter.cc  Parameter.h  ParameterMap.cc  ParameterMap.h  ScriptingSupport.cc  ScriptingSupport.h  main.cc  main_mac.mm
test/: chromix.test.filter.yml  chromix.test.transition.yml  (+3 more)
tools/driver/: CMakeLists.txt  driver.cpp
tools/render/: CMakeLists.txt  render.cpp  render.pro
vfxpipe/: CMakeLists.txt  vfxpipe.cpp  vfxpipe.h
viewer/: CMakeLists.txt  color_swatch.cpp  color_swatch.h  content_pipe.cpp  content_pipe.h  image_color.cpp  image_color.h  main.cpp  render_dialog.cpp  render_dialog.h  render_dialog.ui  viewer.cpp  viewer.h  viewer.pro  viewer.ui
webvfx/: CMakeLists.txt  content.cpp  content.h  content_context.cpp  content_context.h  effects.cpp  effects.h  effects_context.cpp  effects_context.h  effects_impl.cpp  effects_impl.h  frameserver.cpp  frameserver.h  image.cpp  image.h  logger.cpp  logger.h  main.cpp  parameters.cpp  parameters.h  qml_content.cpp  qml_content.h  render_control.cpp  render_control.h  render_strategy.cpp  render_strategy.h  renderer.cpp  renderer.h  rendering_context.cpp  rendering_context.h  video_texture.cpp  video_texture.h  web_content.cpp  web_content.h  web_effects.cpp  web_effects.h  web_image.cpp  web_image.h  web_logger.cpp  web_logger.h  (+12 more)
webvfx/resources/: resources.qrc
webvfx/resources/org/webvfx/WebVfx/: AnimatedCamera.qml  BlenderItem3D.qml  TextTexture.qml  Video.qml  VideoTexture.qml  qmldir
webvfx/resources/script/: camera.js  webvfx-camera.js
webvfx/resources/webvfx/script/: animation.js  camera-animation.js  easing.js  shader.js  tracker.js  world.js
webvfx/resources/webvfx/scripts/: filterkit.js  shader.js  shaderkit.js  threeworld.js  tracker.js  world.js
(+128 files in other folders)
